third_party/kiva-ep/vendor/mathgl-2.4.4/include/mgl2/mgl_pas.pas

/// Apply Sin-Fourier transform
procedure  mgl_data_sinfft(dat: HMDT;const dir: PChar); cdecl; external libmgl;
/// Apply Cos-Fourier transform
procedure  mgl_data_cosfft(dat: HMDT;const dir: PChar); cdecl; external libmgl;
/// Fill data by 'x'/'k' samples for Hankel ('h') or Fourier ('f') transform
procedure  mgl_data_fill_sample(dat: HMDT;const how: PChar); cdecl; external libmgl;
/// Find correlation between 2 data arrays
function  mgl_data_correl(const dat1: HMDT;const dat2: HMDT;const dir: PChar): HMDT; cdecl; external libmgl;
/// Allocate and prepare data for Fourier transform by nthr threads
/// Free data for Fourier transform
/// Make Fourier transform of data x of size n and step s between points
/// Clear internal data for speeding up FFT and Hankel transforms
procedure  mgl_clear_fft(); cdecl; external libmgl;
/// Interpolate by cubic spline the data to given point x=[0...nx-1], y=[0...ny-1], z=[0...nz-1]
function  mgl_data_spline(const dat: HMDT;x: mreal;y: mreal;z: mreal): mreal; cdecl; external libmgl;
/// Interpolate by linear function the data to given point x=[0...nx-1], y=[0...ny-1], z=[0...nz-1]
function  mgl_data_linear(const dat: HMDT;x: mreal;y: mreal;z: mreal): mreal; cdecl; external libmgl;
/// Interpolate by cubic spline the data and return its derivatives at given point x=[0...nx-1], y=[0...ny-1], z=[0...nz-1]
function  mgl_data_spline_ext(const dat: HMDT;x: mreal;y: mreal;z: mreal;dx: Pmreal;dy: Pmreal;dz: Pmreal): mreal; cdecl; external libmgl;
/// Prepare coefficients for global spline interpolation
function  mgl_gspline_init(const x: HMDT;const v: HMDT): HMDT; cdecl; external libmgl;
/// Evaluate global spline (and its derivatives d1, d2 if not NULL) using prepared coefficients \a coef
function  mgl_gspline(const coef: HMDT;dx: mreal;d1: Pmreal;d2: Pmreal): mreal; cdecl; external libmgl;
/// Interpolate by linear function the data and return its derivatives at given point x=[0...nx-1], y=[0...ny-1], z=[0...nz-1]
function  mgl_data_linear_ext(const dat: HMDT;x: mreal;y: mreal;z: mreal;dx: Pmreal;dy: Pmreal;dz: Pmreal): mreal; cdecl; external libmgl;
/// Return an approximated x-value (root) when dat(x) = val
function  mgl_data_solve_1d(const dat: HMDT;val: mreal;spl: integer;i0: integer): mreal; cdecl; external libmgl;
/// Return an approximated value (root) when dat(x) = val
function  mgl_data_solve(const dat: HMDT;val: mreal;dir: char;const i0: HMDT;norm: integer): HMDT; cdecl; external libmgl;
/// Get trace of the data array
function  mgl_data_trace(const d: HMDT): HMDT; cdecl; external libmgl;
/// Resize the data to new sizes
function  mgl_data_resize(const dat: HMDT;mx: integer;my: integer;mz: integer): HMDT; cdecl; external libmgl;
/// Resize the data to new sizes of box [x1,x2]*[y1,y2]*[z1,z2]
function  mgl_data_resize_box(const dat: HMDT;mx: integer;my: integer;mz: integer;x1: mreal;x2: mreal;y1: mreal;y2: mreal;z1: mreal;z2: mreal): HMDT; cdecl; external libmgl;
/// Create n-th points distribution of this data values in range [v1, v2]
function  mgl_data_hist(const dat: HMDT;n: integer;v1: mreal;v2: mreal;nsub: integer): HMDT; cdecl; external libmgl;
/// Create n-th points distribution of this data values in range [v1, v2] with weight w
function  mgl_data_hist_w(const dat: HMDT;const weight: HMDT;n: integer;v1: mreal;v2: mreal;nsub: integer): HMDT; cdecl; external libmgl;
/// Get momentum (1D-array) of data along direction 'dir'. String looks like "x1" for median in x-direction, "x2" for width in x-dir and so on.
function  mgl_data_momentum(const dat: HMDT;dir: char;const how: PChar): HMDT; cdecl; external libmgl;
/// Get array which values is result of interpolation this for coordinates from other arrays
function  mgl_data_evaluate(const dat: HMDT;const idat: HMDT;const jdat: HMDT;const kdat: HMDT;norm: integer): HMDT; cdecl; external libmgl;
/// Set as the data envelop
procedure  mgl_data_envelop(dat: HMDT;dir: char); cdecl; external libmgl;
/// Remove phase jump
procedure  mgl_data_sew(dat: HMDT;const dirs: PChar;da: mreal); cdecl; external libmgl;
/// Crop the data
procedure  mgl_data_crop(dat: HMDT;n1: integer;n2: integer;dir: char); cdecl; external libmgl;
/// Remove rows with duplicate values in column id
procedure  mgl_data_clean(dat: HMDT;id: integer); cdecl; external libmgl;
/// Multiply the data by other one for each element
procedure  mgl_data_mul_dat(dat: HMDT;const d: HMDT); cdecl; external libmgl;
/// Divide the data by other one for each element
procedure  mgl_data_div_dat(dat: HMDT;const d: HMDT); cdecl; external libmgl;
/// Add the other data
procedure  mgl_data_add_dat(dat: HMDT;const d: HMDT); cdecl; external libmgl;
/// Subtract the other data
procedure  mgl_data_sub_dat(dat: HMDT;const d: HMDT); cdecl; external libmgl;
/// Multiply each element by the number
procedure  mgl_data_mul_num(dat: HMDT;d: mreal); cdecl; external libmgl;
/// Divide each element by the number
procedure  mgl_data_div_num(dat: HMDT;d: mreal); cdecl; external libmgl;
/// Add the number
procedure  mgl_data_add_num(dat: HMDT;d: mreal); cdecl; external libmgl;
/// Subtract the number
procedure  mgl_data_sub_num(dat: HMDT;d: mreal); cdecl; external libmgl;
/// Integral data transformation (like Fourier 'f' or 'i', Hankel 'h' or None 'n') for amplitude and phase
function  mgl_transform_a(const am: HMDT;const ph: HMDT;const tr: PChar): HMDT; cdecl; external libmgl;
/// Integral data transformation (like Fourier 'f' or 'i', Hankel 'h' or None 'n') for real and imaginary parts
function  mgl_transform(const re: HMDT;const im: HMDT;const tr: PChar): HMDT; cdecl; external libmgl;
/// Apply Fourier transform for the data and save result into it
procedure  mgl_data_fourier(re: HMDT;im: HMDT;const dir: PChar); cdecl; external libmgl;
/// Short time Fourier analysis for real and imaginary parts. Output is amplitude of partial Fourier (result will have size {dn, floor(nx/dn), ny} for dir='x'
function  mgl_data_stfa(const re: HMDT;const im: HMDT;dn: integer;dir: char): HMDT; cdecl; external libmgl;
/// Do something like Delone triangulation for 3d points
function  mgl_triangulation_3d(const x: HMDT;const y: HMDT;const z: HMDT): HMDT; cdecl; external libmgl;
/// Do Delone triangulation for 2d points
function  mgl_triangulation_2d(const x: HMDT;const y: HMDT): HMDT; cdecl; external libmgl;
/// Find root for nonlinear equation
/// Find root for nonlinear equation defined by textual formula
function  mgl_find_root_txt(const func: PChar;ini: mreal;var_id: char): mreal; cdecl; external libmgl;
/// Find roots for nonlinear equation defined by textual formula
function  mgl_data_roots(const func: PChar;const ini: HMDT;var_id: char): HMDT; cdecl; external libmgl;
//-----------------------------------------------------------------------------
/// Create HMEX object for expression evaluating
function  mgl_create_expr(const expr: PChar): HMEX; cdecl; external libmgl;
/// Delete HMEX object
procedure  mgl_delete_expr(ex: HMEX); cdecl; external libmgl;
/// Return value of expression for given x,y,z variables
function  mgl_expr_eval(ex: HMEX;x: double;y: double;z: double): double; cdecl; external libmgl;
/// Return value of expression for given variables
function  mgl_expr_eval_v(ex: HMEX;vars: Pmreal): double; cdecl; external libmgl;
/// Return value of expression differentiation over variable dir for given x,y,z variables
function  mgl_expr_diff(ex: HMEX;dir: char;x: double;y: double;z: double): double; cdecl; external libmgl;
/// Return value of expression differentiation over variable dir for given variables
function  mgl_expr_diff_v(ex: HMEX;dir: char;vars: Pmreal): double; cdecl; external libmgl;
//-----------------------------------------------------------------------------
//-----------------------------------------------------------------------------
//-----------------------------------------------------------------------------
{== ../../include/mgl2/datac_cf.h ==}
//-----------------------------------------------------------------------------
//-----------------------------------------------------------------------------
//-----------------------------------------------------------------------------
/// Get integer power of x
function  mgl_ipowc(x: dual;n: integer): dual; cdecl; external libmgl;
/// Get exp(i*a)
function  mgl_expi(a: dual): dual; cdecl; external libmgl;
overload;
/// Create HMDT object
function  mgl_create_datac(): HADT; cdecl; external libmgl;
/// Create HMDT object with specified sizes
function  mgl_create_datac_size(nx: integer;ny: integer;nz: integer): HADT; cdecl; external libmgl;
/// Create HMDT object with data from file
function  mgl_create_datac_file(const fname: PChar): HADT; cdecl; external libmgl;
/// Delete HMDT object
procedure  mgl_delete_datac(dat: HADT); cdecl; external libmgl;
/// Rearange data dimensions
procedure  mgl_datac_rearrange(dat: HADT;mx: integer;my: integer;mz: integer); cdecl; external libmgl;
/// Link external data array (don't delete it at exit)
procedure  mgl_datac_link(dat: HADT;A: Pdual;mx: integer;my: integer;mz: integer); cdecl; external libmgl;
/// Allocate memory and copy the data from the (float *) array
procedure  mgl_datac_set_float(dat: HADT;const A: Preal;mx: integer;my: integer;mz: integer); cdecl; external libmgl;
/// Allocate memory and copy the data from the (double *) array
procedure  mgl_datac_set_double(dat: HADT;const A: Pdouble;mx: integer;my: integer;mz: integer); cdecl; external libmgl;
/// Allocate memory and copy the data from the (dual *) array
procedure  mgl_datac_set_complex(dat: HADT;const A: Pdual;mx: integer;my: integer;mz: integer); cdecl; external libmgl;
/// Import data from abstract type
procedure  mgl_datac_set(dat: HADT;const a: HMDT); cdecl; external libmgl;
/// Allocate memory and copy the data from the gsl_vector
procedure  mgl_datac_set_vector(dat: HADT;v: PGSLVector); cdecl; external libmgl;
/// Allocate memory and copy the data from the gsl_matrix
procedure  mgl_datac_set_matrix(dat: HADT;m: PGSLMatrix); cdecl; external libmgl;
/// Set value of data element [i,j,k]
procedure  mgl_datac_set_value(dat: HADT;v: dual;i: integer;j: integer;k: integer); cdecl; external libmgl;
/// Get value of data element [i,j,k]
function  mgl_datac_get_value(const dat: HMDT;i: integer;j: integer;k: integer): dual; cdecl; external libmgl;
/// Allocate memory and scanf the data from the string
procedure  mgl_datac_set_values(dat: HADT;const val: PChar;nx: integer;ny: integer;nz: integer); cdecl; external libmgl;
/// Returns pointer to internal data array
function mgl_datac_data(dat: HADT): PDual; cdecl; external libmgl;
/// Returns pointer to data element [i,j,k]
function mgl_datac_value(dat: HADT;i: integer;j: integer;k: integer): PDual; cdecl; external libmgl;
/// Set the data from HCDT objects for real and imaginary parts
procedure  mgl_datac_set_ri(dat: HADT;const re: HMDT;const im: HMDT); cdecl; external libmgl;
/// Set the data from HCDT objects as amplitude and phase of complex data
procedure  mgl_datac_set_ap(dat: HADT;const abs: HMDT;const phi: HMDT); cdecl; external libmgl;
/// Read data from tab-separated text file with auto determining size
function  mgl_datac_read(dat: HADT;const fname: PChar): integer; cdecl; external libmgl;
/// Read data from text file with size specified at beginning of the file
function  mgl_datac_read_mat(dat: HADT;const fname: PChar;dim: integer): integer; cdecl; external libmgl;
/// Read data from text file with specifeid size
function  mgl_datac_read_dim(dat: HADT;const fname: PChar;mx: integer;my: integer;mz: integer): integer; cdecl; external libmgl;
/// Read data from tab-separated text files with auto determining size which filenames are result of sprintf(fname,templ,t) where t=from:step:to
function  mgl_datac_read_range(d: HADT;const templ: PChar;from: double;to_: double;step: double;as_slice: integer): integer; cdecl; external libmgl;
